refactor: modernize Java 25 syntax and collection access
Replace legacy casts, indexed collection access, path construction, and
explicit UTF-8 defaults with modern Java APIs across production and test
code. Add `@Serial` annotations to serializable types and update multiline
UI text blocks for consistency.